Fix double border for Login

--- a/src/frontend/src/pages/Login.css
+++ b/src/frontend/src/pages/Login.css
@@ -1,7 +1,6 @@
 .wrapperLogin {
     background-color: black;
     color: white;
-    border-right: 1px solid #707070;
     height: 100vh;
 
     display: grid;
